deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      labels:
        app: expense-tracker
    spec:
      containers:
      - name: expense-tracker
        image: expensetracker
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: sqlite-storage
          mountPath: /storage
      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: sqlite-storage-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-service
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000
  selector:
    app: expense-tracker

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expense-tracker-service
            port:
              number: 5000
